@@ -470,3 +470,5 @@ Change list for PernMangband
 18/12/2001 (Evileye)
 - More bugfixes on traps which were causing memory corruption
 - Edge of world bug fixed
+- Fixed bug in wiz_lite.
+- Added signposts - all special info structs need to be stored.
